snugom/tests/ui/datetime_epoch_on_non_datetime.stderr
error: #[snugom(datetime)] requires a chrono::DateTime<Tz> field or Option thereof
  --> tests/ui/datetime_epoch_on_non_datetime.rs:13:14
   |
13 |     #[snugom(datetime)]
   |              ^^^^^^^^
